--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,8 @@
 		- swipe left to move forward
 		- export notes
 		- first-run capability
+			- use a settings table
+				- two columns: name, value
 		- inform user if update is available (appcache, standalone apps only)
 			- use a mode variable (cora.Config.mode) to determine what features should be enabled
 	
@@ -15,8 +17,6 @@
 		- all interface text needs to be abstracted to cora.Lang.[message]
 		- console.log = function () {};
 		- try and wrap db activity in transactions where possible (persistence.transaction())
-		- onDelete events where the entity id returns null should provide an error dialog
-			- currently, just silently transition to #home
 		- copyright credit and license at top of all original files
 			
 	BUGS
