--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,10 @@ Changelog
 1.2
 ---
 
+* Added touchToClick module to improve responsiveness and suppress superfluous click events - mf
 * Updated to jQuery 2.0.3 and jQuery Mobile 1.3.1 - mf
+* Tag field on Add Note screen has been moved above the Note field - mf
+* Changed .attr('value') calls to use .val() instead - mf
 
 1.1
 ---
