--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Changelog
 * Updated to jQuery 2.0.3 and jQuery Mobile 1.3.1 - mf
 * Tag field on Add Note screen has been moved above the Note field - mf
 * Changed .attr('value') calls to use .val() instead - mf
+* Clicking a tag suggestion adds the tag plus a comma and puts focus back on the tag field - mf
 
 1.1
 ---
